[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "esmerald_sessions"
description = "An alternative SessionMiddleware for Esmerald with Pydantic."
long_description = "An alternative SessionMiddleware for Esmerald with Pydantic."
readme = "README.md"
requires-python = ">=3.7"
dynamic = ['version']
license = "MIT"
authors = [
    { name = "Tiago Silva", email = "tiago.silva@dymmond.com" },
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Framework :: AnyIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "aiomcache>=0.7.0",
    "aioredis>=2.0.1,<3.0.0",
    "asyncio>=3.4.3,<4.0.0",
    "esmerald>=0.2.10",
    "pydantic>=1.10.2,<2.0.0",
    "pymemcache>=4.0.0,<5.0.0",
    "redis>=4.3.4,<5.0.0",
]
keywords = ["api", "rest", "http", "asgi", "pydantic", "starlette", "fastapi", "esmerald", "framework", "websocket", "openapi", "ml", "machine learning"]

[project.urls]
Homepage = "https://github.com/dymmond/esmerald-sessions"
Documentation = "https://esmerald-sessions.dymmond.com/"
Changelog = "https://esmerald-sessions.dymmond.com/release-notes/"
Funding = "https://github.com/sponsors/tarsil"
Source = "https://github.com/dymmond/esmerald-sessions"

[project.optional-dependencies]
test = [
    "asyncz[test]==0.1.3",
    "fakeredis>=1.10.1",
    "pytest >=7.1.3,<8.0.0",
    "pytest-asyncio >=0.19.0,<0.20.0",
    "pytest-cov >=2.12.0,<5.0.0",
    "pytest-mock>=3.10.0",
    "requests >=2.27.0,<3.0.0",
]

dev = [
    "autoflake >=1.4.0,<3.0.0",
    "black>=22.10.0,<23.0.0",
    "flake8>=3.8.3,<7.0.0",
    "isort>=5.0.6,<6.0.0",
    "mypy==0.991",
    "pre-commit >=2.17.0,<3.0.0",
    "loguru>=0.6.0,<0.7.0",
    "watchfiles>=0.16.1,<0.20.0"
]

doc = [
    "mkautodoc >=0.2.0,<0.3.0",
    "mkdocs >=1.1.2,<2.0.0",
    "mkdocs-material >=8.1.4,<9.0.0",
    "mdx-include >=1.4.1,<2.0.0",
    "mkdocs-markdownextradata-plugin >=0.1.7,<0.3.0",
    "mkdocstrings>=0.19.0,<0.20.0",
    "pyyaml >=5.3.1,<7.0.0",
]

all = [
    "aiomcache>=0.7.0",
    "aioredis>=2.0.1,<3.0.0",
    "esmerald>=0.5.1",
    "asyncio>=3.4.3,<4.0.0",
    "pydantic>=1.10.2,<2.0.0",
    "pymemcache>=4.0.0,<5.0.0",
    "pytz>=2022.6",
    "redis>=4.3.4,<5.0.0",
    "tzlocal>=4.2,<5.0"
]

[tool.hatch.version]
path = "esmerald_sessions/__init__.py"

[tool.isort]
profile = "black"
known_third_party = ["esmerald-sessions", "pydantic", "starlette"]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "esmerald_sessions.tests.*"
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
addopts = [
  "--strict-config",
  "--strict-markers",
]
xfail_strict = true
junit_family = "xunit2"

[tool.hatch.build.targets.sdist]
include = [
    "/esmerald_sessions",
]
